<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <!-- LOGO -->
    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:autofillHints="name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:autofillHints="emailAddress"
        />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/linkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="#2196F3"
        android:layout_marginTop="16dp" />

</LinearLayout>
